# optics-by-example

./: .gitignore  README.md  default.nix  optics-by-example.cabal  shell.nix
nix/: nixpkgs.nix
nix/haskell-packages/: generic-optics.nix  optics-by-example.nix  optics-core.nix  optics-extra.nix  optics-th.nix  optics.nix
src/: Main.hs
src/OpticsByExample/: Lens.hs  Optics.hs
test/: doctest.hs
