cabal-version: 2.2

name:        optics-by-example
version:     0.0.0.0
-- synopsis:
-- description:
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/optics-by-example
license:     ISC
copyright:   2020 Evan Relf
build-type:  Simple


--------------------------------------------------------------------------------
-- Executables
--------------------------------------------------------------------------------


executable optics-by-example
  main-is: Main.hs
  hs-source-dirs: src
  other-modules:
    OpticsByExample.Lens
    OpticsByExample.Optics
  build-depends:
    , base ^>= 4.12.0.0
    , aeson
    , containers
    , generic-lens
    , generic-optics
    , lens
    , lens-aeson
    , mtl
    , optics
    , text
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -foptimal-applicative-do
    -fshow-warning-groups
    -threaded
    -rtsopts
    -with-rtsopts=-N
